--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <section class="icons-container">
 
     <div class="icons">
-        <img src="images/icon-1.png" alt="">
+        <img src="icon-1.png" alt="">
         <div class="info">
             <h3>free delivery</h3>
             <span>on all orders</span>
@@ -89,7 +89,7 @@
     </div>
 
     <div class="icons">
-        <img src="images/icon-2.png" alt="">
+        <img src="icon-2.png" alt="">
         <div class="info">
             <h3>10 days returns</h3>
             <span>moneyback guarantee</span>
@@ -97,7 +97,7 @@
     </div>
 
     <div class="icons">
-        <img src="images/icon-3.png" alt="">
+        <img src="icon-3.png" alt="">
         <div class="info">
             <h3>offer & gifts</h3>
             <span>on all orders</span>
@@ -105,7 +105,7 @@
     </div>
 
     <div class="icons">
-        <img src="images/icon-4.png" alt="">
+        <img src="icon-4.png" alt="">
         <div class="info">
             <h3>secure paymens</h3>
             <span>protected by paypal</span>
