Memperbaiki Title dan Contact

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>complete responsive flower website design tutorial</title>
+    <title>Flower Online Shop</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -400,8 +400,8 @@
         <div class="box">
             <h3>contact info</h3>
             <a href="#">+123-456-7890</a>
-            <a href="#">example@gmail.com</a>
-            <a href="#">mumbai, india - 400104</a>
+            <a href="#">student@terpelajar.com</a>
+            <a href="#">Indonesia, Medan - 400104</a>
             <img src="payment.png" alt="">
         </div>
 
